welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:13: error: ':' expected but identifier found.
	def colonne(Int decalage)
                        ^Array2:44: error: identifier expected but '}' found.
}
^